--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-  <script defer src="bundle.js"></script></head>
+  <script defer src="bundle.js"></script><link href="main.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
     <script
